Changed language of first List and changed some items beacuse they weren't family-friendly

--- a/list.html
+++ b/list.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lista zakupów</title>
+    <title>Shopping list</title>
 </head>
 <body>
     <ul>
-        <h2>Lista zakupów</h2>
-        <li>Wafle holenderskie</li>
-        <li>Zupka chińska</li>
-        <li>e-liquid</li>
-        <li>Herbata matcha</li>
+        <h2>Shopping list</h2>
+        <li>Stroopwafels</li>
+        <li>Cornflakes</li>
+        <li>Water 1.5l</li>
+        <li>Matcha</li>
     </ul>
     <ol>
         <h2>TODO'S</h2>
