added index.html file where from u can access recipies

--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
 </head>
 <body>
     <h1>
-        Odin Recipies
+        Recipies:
     </h1>
+    <h3><a href="recipies2/teriyaki.html">Teriyaki chicken</a></h3>
+    <h3><a href="recipies2/potatoes.html">Creamy mashed potatoes</a></h3>
+    <h3><a href="recipies2/fritters.html">Crispy broccoli parmesan fritters</h3>
 </body>
 </html>
