Added photo and changed title to index.html

--- a/index.html
+++ b/index.html
@@ -3,14 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Recipies</title>
 </head>
 <body>
+    <img src="https://t4.ftcdn.net/jpg/03/32/75/39/360_F_332753934_tBacXEgxnVplFBRyKbCif49jh0Wz89ns.jpg">
     <h1>
         Recipies:
     </h1>
     <h3><a href="recipies2/teriyaki.html">Teriyaki chicken</a></h3>
     <h3><a href="recipies2/potatoes.html">Creamy mashed potatoes</a></h3>
     <h3><a href="recipies2/fritters.html">Crispy broccoli parmesan fritters</h3>
+    <a href="https://stock.adobe.com/search?k=cooking&asset_id=332753934">Click here for image source</a>
 </body>
 </html>
