added images and solutions to back to teriyaki.html, potatoes.html and fritters.html

--- a/recipies2/teriyaki.html
+++ b/recipies2/teriyaki.html
@@ -32,5 +32,6 @@
     </li>
     <li>Add in the steamed broccoli. Garnish with green onion (or shallot) slices and serve over steamed rice.</li>
 </ol>
-<h4><a href="https://cafedelites.com/teriyaki-chicken-recipe/">Click here for source</a></h4>
+<h4><a href="https://cafedelites.com/teriyaki-chicken-recipe/">Click here for source.</a></h4>
+<h4><a href="../index.html">Click to go back to main site.</a></h4>
 </body>
