added dot at the end of the line 16.

--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
     <h3><a href="recipies2/teriyaki.html">Teriyaki chicken</a></h3>
     <h3><a href="recipies2/potatoes.html">Creamy mashed potatoes</a></h3>
     <h3><a href="recipies2/fritters.html">Crispy broccoli parmesan fritters</h3>
-    <a href="https://stock.adobe.com/search?k=cooking&asset_id=332753934">Click here for image source</a>
+    <a href="https://stock.adobe.com/search?k=cooking&asset_id=332753934">Click here for image source.</a>
 </body>
 </html>
